+ Queues homework